Fix paint invalidation rects for repeating paginated table headers.

These headers are painted multiple times, not through the usual fragmentation
machinery, but one-off code that positions them on each page.

BUG=618074

Review-Url: https://codereview.chromium.org/2118843002
Cr-Commit-Position: refs/heads/master@{#403514}

Former-commit-id: bcc3fac37a6af0781b09a1344c05873016254688